--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
                     <div class="video-info">
                         <h3>Short Term Momentum Strategy</h3>
                         <div class="channel">Quantified Strategies</div>
-                        <div class="date">20 minutes ago</div>
+                        <div class="date">39 minutes ago</div>
                     </div>
                 </a>
             </div>
@@ -134,7 +134,7 @@
                     <div class="video-info">
                         <h3>Are Prop firms a giant Ponzi scheme?</h3>
                         <div class="channel">Charlie Burton Trading</div>
-                        <div class="date">1 hours ago</div>
+                        <div class="date">2 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -145,7 +145,7 @@
                     <div class="video-info">
                         <h3>Michael Singer - Understanding Personal vs Impersonal</h3>
                         <div class="channel">Seats of Contemplation</div>
-                        <div class="date">1 hours ago</div>
+                        <div class="date">2 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -167,7 +167,7 @@
                     <div class="video-info">
                         <h3>5 Japanese Habits for Your Calm & Positive Living</h3>
                         <div class="channel">Samurai Matcha</div>
-                        <div class="date">7 hours ago</div>
+                        <div class="date">8 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -178,7 +178,7 @@
                     <div class="video-info">
                         <h3>Can't believe experienced golfers make this huge setup mistake...</h3>
                         <div class="channel">SagutoGolf</div>
-                        <div class="date">13 hours ago</div>
+                        <div class="date">14 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -222,7 +222,7 @@
                     <div class="video-info">
                         <h3>The Unawakened Human Condition | Eckhart Tolle on Everyday Presence (Part 2)</h3>
                         <div class="channel">Eckhart Tolle</div>
-                        <div class="date">18 hours ago</div>
+                        <div class="date">19 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -233,7 +233,7 @@
                     <div class="video-info">
                         <h3>What's the Chance the Market Closes Lower After a Gap Down?</h3>
                         <div class="channel">Quantified Strategies</div>
-                        <div class="date">22 hours ago</div>
+                        <div class="date">23 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -596,7 +596,7 @@
                     <div class="video-info">
                         <h3>Why Passive Investing Crushes Stock Picking (Backed by Data)</h3>
                         <div class="channel">Quantified Strategies</div>
-                        <div class="date">3 days ago</div>
+                        <div class="date">4 days ago</div>
                     </div>
                 </a>
             </div>
@@ -794,7 +794,7 @@
                     <div class="video-info">
                         <h3>The Big Challenge Before Humanity | Sadhguru</h3>
                         <div class="channel">Sadhguru</div>
-                        <div class="date">5 days ago</div>
+                        <div class="date">6 days ago</div>
                     </div>
                 </a>
             </div>
@@ -1410,7 +1410,7 @@
                     <div class="video-info">
                         <h3>Mean Reversion System That Works (Backed By Data)</h3>
                         <div class="channel">Rayner Teo</div>
-                        <div class="date">1 week ago</div>
+                        <div class="date">2 weeks ago</div>
                     </div>
                 </a>
             </div>
@@ -5083,7 +5083,7 @@
                         <div class="video-info">
                             <h3>Short Term Momentum Strategy</h3>
                             <div class="channel">Quantified Strategies</div>
-                            <div class="date">20 minutes ago</div>
+                            <div class="date">39 minutes ago</div>
                         </div>
                     </a>
                 </div>
@@ -5094,7 +5094,7 @@
                         <div class="video-info">
                             <h3>Are Prop firms a giant Ponzi scheme?</h3>
                             <div class="channel">Charlie Burton Trading</div>
-                            <div class="date">1 hours ago</div>
+                            <div class="date">2 hours ago</div>
                         </div>
                     </a>
                 </div>
@@ -5116,7 +5116,7 @@
                         <div class="video-info">
                             <h3>What's the Chance the Market Closes Lower After a Gap Down?</h3>
                             <div class="channel">Quantified Strategies</div>
-                            <div class="date">22 hours ago</div>
+                            <div class="date">23 hours ago</div>
                         </div>
                     </a>
                 </div>
@@ -5281,7 +5281,7 @@
                         <div class="video-info">
                             <h3>Why Passive Investing Crushes Stock Picking (Backed by Data)</h3>
                             <div class="channel">Quantified Strategies</div>
-                            <div class="date">3 days ago</div>
+                            <div class="date">4 days ago</div>
                         </div>
                     </a>
                 </div>
@@ -5622,7 +5622,7 @@
                         <div class="video-info">
                             <h3>Mean Reversion System That Works (Backed By Data)</h3>
                             <div class="channel">Rayner Teo</div>
-                            <div class="date">1 week ago</div>
+                            <div class="date">2 weeks ago</div>
                         </div>
                     </a>
                 </div>
@@ -7238,7 +7238,7 @@
                         <div class="video-info">
                             <h3>Michael Singer - Understanding Personal vs Impersonal</h3>
                             <div class="channel">Seats of Contemplation</div>
-                            <div class="date">1 hours ago</div>
+                            <div class="date">2 hours ago</div>
                         </div>
                     </a>
                 </div>
@@ -7282,7 +7282,7 @@
                         <div class="video-info">
                             <h3>The Unawakened Human Condition | Eckhart Tolle on Everyday Presence (Part 2)</h3>
                             <div class="channel">Eckhart Tolle</div>
-                            <div class="date">18 hours ago</div>
+                            <div class="date">19 hours ago</div>
                         </div>
                     </a>
                 </div>
@@ -7513,7 +7513,7 @@
                         <div class="video-info">
                             <h3>The Big Challenge Before Humanity | Sadhguru</h3>
                             <div class="channel">Sadhguru</div>
-                            <div class="date">5 days ago</div>
+                            <div class="date">6 days ago</div>
                         </div>
                     </a>
                 </div>
@@ -8234,7 +8234,7 @@
                         <div class="video-info">
                             <h3>5 Japanese Habits for Your Calm & Positive Living</h3>
                             <div class="channel">Samurai Matcha</div>
-                            <div class="date">7 hours ago</div>
+                            <div class="date">8 hours ago</div>
                         </div>
                     </a>
                 </div>
@@ -9401,7 +9401,7 @@
                         <div class="video-info">
                             <h3>Can't believe experienced golfers make this huge setup mistake...</h3>
                             <div class="channel">SagutoGolf</div>
-                            <div class="date">13 hours ago</div>
+                            <div class="date">14 hours ago</div>
                         </div>
                     </a>
                 </div>
