--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
                     <div class="video-info">
                         <h3>Philadelphia Hoagie Rolls 2.0 | The Ultimate Upgrade</h3>
                         <div class="channel">Julian Sisofo</div>
-                        <div class="date">36 minutes ago</div>
+                        <div class="date">46 minutes ago</div>
                     </div>
                 </a>
             </div>
@@ -156,7 +156,7 @@
                     <div class="video-info">
                         <h3>Experience is the trader's real edge...</h3>
                         <div class="channel">Charlie Burton Trading</div>
-                        <div class="date">4 hours ago</div>
+                        <div class="date">5 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -200,7 +200,7 @@
                     <div class="video-info">
                         <h3>Is Space Exploration Really Needed? NASA Astronaut Sunita Williams & Sadhguru</h3>
                         <div class="channel">Sadhguru</div>
-                        <div class="date">9 hours ago</div>
+                        <div class="date">10 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -255,7 +255,7 @@
                     <div class="video-info">
                         <h3>A tiny elite will soon control all the resources</h3>
                         <div class="channel">Garys Economics</div>
-                        <div class="date">23 hours ago</div>
+                        <div class="date">Yesterday</div>
                     </div>
                 </a>
             </div>
@@ -453,7 +453,7 @@
                     <div class="video-info">
                         <h3>What taxes will they increase at the Budget next month?</h3>
                         <div class="channel">Garys Economics</div>
-                        <div class="date">2 days ago</div>
+                        <div class="date">3 days ago</div>
                     </div>
                 </a>
             </div>
@@ -5094,7 +5094,7 @@
                         <div class="video-info">
                             <h3>Experience is the trader's real edge...</h3>
                             <div class="channel">Charlie Burton Trading</div>
-                            <div class="date">4 hours ago</div>
+                            <div class="date">5 hours ago</div>
                         </div>
                     </a>
                 </div>
@@ -5127,7 +5127,7 @@
                         <div class="video-info">
                             <h3>A tiny elite will soon control all the resources</h3>
                             <div class="channel">Garys Economics</div>
-                            <div class="date">23 hours ago</div>
+                            <div class="date">Yesterday</div>
                         </div>
                     </a>
                 </div>
@@ -5193,7 +5193,7 @@
                         <div class="video-info">
                             <h3>What taxes will they increase at the Budget next month?</h3>
                             <div class="channel">Garys Economics</div>
-                            <div class="date">2 days ago</div>
+                            <div class="date">3 days ago</div>
                         </div>
                     </a>
                 </div>
@@ -7260,7 +7260,7 @@
                         <div class="video-info">
                             <h3>Is Space Exploration Really Needed? NASA Astronaut Sunita Williams & Sadhguru</h3>
                             <div class="channel">Sadhguru</div>
-                            <div class="date">9 hours ago</div>
+                            <div class="date">10 hours ago</div>
                         </div>
                     </a>
                 </div>
@@ -8735,7 +8735,7 @@
                         <div class="video-info">
                             <h3>Philadelphia Hoagie Rolls 2.0 | The Ultimate Upgrade</h3>
                             <div class="channel">Julian Sisofo</div>
-                            <div class="date">36 minutes ago</div>
+                            <div class="date">46 minutes ago</div>
                         </div>
                     </a>
                 </div>
