--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
                     <div class="video-info">
                         <h3>Eckhart Tolle on the Dysfunctional Dance with Thought</h3>
                         <div class="channel">Eckhart Tolle</div>
-                        <div class="date">16 minutes ago</div>
+                        <div class="date">40 minutes ago</div>
                     </div>
                 </a>
             </div>
@@ -134,7 +134,7 @@
                     <div class="video-info">
                         <h3>Philadelphia Hoagie Rolls 2.0 | The Ultimate Upgrade</h3>
                         <div class="channel">Julian Sisofo</div>
-                        <div class="date">1 hours ago</div>
+                        <div class="date">2 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -145,7 +145,7 @@
                     <div class="video-info">
                         <h3>Dhanteras Festival is Not About Wealth | Sadhguru</h3>
                         <div class="channel">Sadhguru</div>
-                        <div class="date">2 hours ago</div>
+                        <div class="date">3 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -189,7 +189,7 @@
                     <div class="video-info">
                         <h3>Are Prop firms a giant Ponzi scheme?</h3>
                         <div class="channel">Charlie Burton Trading</div>
-                        <div class="date">8 hours ago</div>
+                        <div class="date">9 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -200,7 +200,7 @@
                     <div class="video-info">
                         <h3>Michael Singer - Understanding Personal vs Impersonal</h3>
                         <div class="channel">Seats of Contemplation</div>
-                        <div class="date">8 hours ago</div>
+                        <div class="date">9 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -222,7 +222,7 @@
                     <div class="video-info">
                         <h3>5 Japanese Habits for Your Calm & Positive Living</h3>
                         <div class="channel">Samurai Matcha</div>
-                        <div class="date">14 hours ago</div>
+                        <div class="date">15 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -233,7 +233,7 @@
                     <div class="video-info">
                         <h3>Can't believe experienced golfers make this huge setup mistake...</h3>
                         <div class="channel">SagutoGolf</div>
-                        <div class="date">20 hours ago</div>
+                        <div class="date">21 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -354,7 +354,7 @@
                     <div class="video-info">
                         <h3>tip 12: tomato sauce spilled on the pizza</h3>
                         <div class="channel">Vito Iacopelli</div>
-                        <div class="date">Yesterday</div>
+                        <div class="date">2 days ago</div>
                     </div>
                 </a>
             </div>
@@ -5116,7 +5116,7 @@
                         <div class="video-info">
                             <h3>Are Prop firms a giant Ponzi scheme?</h3>
                             <div class="channel">Charlie Burton Trading</div>
-                            <div class="date">8 hours ago</div>
+                            <div class="date">9 hours ago</div>
                         </div>
                     </a>
                 </div>
@@ -7238,7 +7238,7 @@
                         <div class="video-info">
                             <h3>Eckhart Tolle on the Dysfunctional Dance with Thought</h3>
                             <div class="channel">Eckhart Tolle</div>
-                            <div class="date">16 minutes ago</div>
+                            <div class="date">40 minutes ago</div>
                         </div>
                     </a>
                 </div>
@@ -7249,7 +7249,7 @@
                         <div class="video-info">
                             <h3>Dhanteras Festival is Not About Wealth | Sadhguru</h3>
                             <div class="channel">Sadhguru</div>
-                            <div class="date">2 hours ago</div>
+                            <div class="date">3 hours ago</div>
                         </div>
                     </a>
                 </div>
@@ -7260,7 +7260,7 @@
                         <div class="video-info">
                             <h3>Michael Singer - Understanding Personal vs Impersonal</h3>
                             <div class="channel">Seats of Contemplation</div>
-                            <div class="date">8 hours ago</div>
+                            <div class="date">9 hours ago</div>
                         </div>
                     </a>
                 </div>
@@ -8234,7 +8234,7 @@
                         <div class="video-info">
                             <h3>5 Japanese Habits for Your Calm & Positive Living</h3>
                             <div class="channel">Samurai Matcha</div>
-                            <div class="date">14 hours ago</div>
+                            <div class="date">15 hours ago</div>
                         </div>
                     </a>
                 </div>
@@ -8735,7 +8735,7 @@
                         <div class="video-info">
                             <h3>Philadelphia Hoagie Rolls 2.0 | The Ultimate Upgrade</h3>
                             <div class="channel">Julian Sisofo</div>
-                            <div class="date">1 hours ago</div>
+                            <div class="date">2 hours ago</div>
                         </div>
                     </a>
                 </div>
@@ -8746,7 +8746,7 @@
                         <div class="video-info">
                             <h3>tip 12: tomato sauce spilled on the pizza</h3>
                             <div class="channel">Vito Iacopelli</div>
-                            <div class="date">Yesterday</div>
+                            <div class="date">2 days ago</div>
                         </div>
                     </a>
                 </div>
@@ -9401,7 +9401,7 @@
                         <div class="video-info">
                             <h3>Can't believe experienced golfers make this huge setup mistake...</h3>
                             <div class="channel">SagutoGolf</div>
-                            <div class="date">20 hours ago</div>
+                            <div class="date">21 hours ago</div>
                         </div>
                     </a>
                 </div>
