--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
                     <div class="video-info">
                         <h3>SIDEMEN LEAK THEIR CAMERA ROLLS: IMPOSTOR EDITION</h3>
                         <div class="channel">MoreSidemen</div>
-                        <div class="date">31 minutes ago</div>
+                        <div class="date">46 minutes ago</div>
                     </div>
                 </a>
             </div>
@@ -134,7 +134,7 @@
                     <div class="video-info">
                         <h3>HOW TO TESTING A PIZZA, some tips and advice with Massimo Nocerino</h3>
                         <div class="channel">Massimo Nocerino Pizza Massimo</div>
-                        <div class="date">1 hours ago</div>
+                        <div class="date">2 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -189,7 +189,7 @@
                     <div class="video-info">
                         <h3>Experience is the trader's real edge...</h3>
                         <div class="channel">Charlie Burton Trading</div>
-                        <div class="date">9 hours ago</div>
+                        <div class="date">10 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -233,7 +233,7 @@
                     <div class="video-info">
                         <h3>Is Space Exploration Really Needed? NASA Astronaut Sunita Williams & Sadhguru</h3>
                         <div class="channel">Sadhguru</div>
-                        <div class="date">14 hours ago</div>
+                        <div class="date">15 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -893,7 +893,7 @@
                     <div class="video-info">
                         <h3>SIDEMEN EXTREME PRECISION TEST</h3>
                         <div class="channel">MoreSidemen</div>
-                        <div class="date">6 days ago</div>
+                        <div class="date">1 week ago</div>
                     </div>
                 </a>
             </div>
@@ -5094,7 +5094,7 @@
                         <div class="video-info">
                             <h3>Experience is the trader's real edge...</h3>
                             <div class="channel">Charlie Burton Trading</div>
-                            <div class="date">9 hours ago</div>
+                            <div class="date">10 hours ago</div>
                         </div>
                     </a>
                 </div>
@@ -7271,7 +7271,7 @@
                         <div class="video-info">
                             <h3>Is Space Exploration Really Needed? NASA Astronaut Sunita Williams & Sadhguru</h3>
                             <div class="channel">Sadhguru</div>
-                            <div class="date">14 hours ago</div>
+                            <div class="date">15 hours ago</div>
                         </div>
                     </a>
                 </div>
@@ -8735,7 +8735,7 @@
                         <div class="video-info">
                             <h3>HOW TO TESTING A PIZZA, some tips and advice with Massimo Nocerino</h3>
                             <div class="channel">Massimo Nocerino Pizza Massimo</div>
-                            <div class="date">1 hours ago</div>
+                            <div class="date">2 hours ago</div>
                         </div>
                     </a>
                 </div>
@@ -9572,7 +9572,7 @@
                         <div class="video-info">
                             <h3>SIDEMEN LEAK THEIR CAMERA ROLLS: IMPOSTOR EDITION</h3>
                             <div class="channel">MoreSidemen</div>
-                            <div class="date">31 minutes ago</div>
+                            <div class="date">46 minutes ago</div>
                         </div>
                     </a>
                 </div>
@@ -9605,7 +9605,7 @@
                         <div class="video-info">
                             <h3>SIDEMEN EXTREME PRECISION TEST</h3>
                             <div class="channel">MoreSidemen</div>
-                            <div class="date">6 days ago</div>
+                            <div class="date">1 week ago</div>
                         </div>
                     </a>
                 </div>
