--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
                     <div class="video-info">
                         <h3>What Makes You A Family? | Sadhguru</h3>
                         <div class="channel">Sadhguru</div>
-                        <div class="date">1 minutes ago</div>
+                        <div class="date">24 minutes ago</div>
                     </div>
                 </a>
             </div>
@@ -134,7 +134,7 @@
                     <div class="video-info">
                         <h3>SIDEMEN PHOTO ROULETTE: IMPOSTOR EDITION</h3>
                         <div class="channel">MoreSidemen</div>
-                        <div class="date">8 hours ago</div>
+                        <div class="date">9 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -189,7 +189,7 @@
                     <div class="video-info">
                         <h3>Trading Strategy Testing: Walk-Forward Example & Analysis #shorts</h3>
                         <div class="channel">Algo Trading With Kevin Davey</div>
-                        <div class="date">15 hours ago</div>
+                        <div class="date">16 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -222,7 +222,7 @@
                     <div class="video-info">
                         <h3>Are Prop firms a giant Ponzi scheme?</h3>
                         <div class="channel">Charlie Burton Trading</div>
-                        <div class="date">20 hours ago</div>
+                        <div class="date">21 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -464,7 +464,7 @@
                     <div class="video-info">
                         <h3>Darwinex TV: 15.10.2025</h3>
                         <div class="channel">Darwinex</div>
-                        <div class="date">2 days ago</div>
+                        <div class="date">3 days ago</div>
                     </div>
                 </a>
             </div>
@@ -706,7 +706,7 @@
                     <div class="video-info">
                         <h3>Darwinex TV: Performance Coaching - Session 11</h3>
                         <div class="channel">Darwinex</div>
-                        <div class="date">4 days ago</div>
+                        <div class="date">5 days ago</div>
                     </div>
                 </a>
             </div>
@@ -882,7 +882,7 @@
                     <div class="video-info">
                         <h3>My New "Trading System" Kills the Market Over 17 Years</h3>
                         <div class="channel">Scott Welsh Strategies</div>
-                        <div class="date">6 days ago</div>
+                        <div class="date">1 week ago</div>
                     </div>
                 </a>
             </div>
@@ -5083,7 +5083,7 @@
                         <div class="video-info">
                             <h3>Trading Strategy Testing: Walk-Forward Example & Analysis #shorts</h3>
                             <div class="channel">Algo Trading With Kevin Davey</div>
-                            <div class="date">15 hours ago</div>
+                            <div class="date">16 hours ago</div>
                         </div>
                     </a>
                 </div>
@@ -5116,7 +5116,7 @@
                         <div class="video-info">
                             <h3>Are Prop firms a giant Ponzi scheme?</h3>
                             <div class="channel">Charlie Burton Trading</div>
-                            <div class="date">20 hours ago</div>
+                            <div class="date">21 hours ago</div>
                         </div>
                     </a>
                 </div>
@@ -5182,7 +5182,7 @@
                         <div class="video-info">
                             <h3>Darwinex TV: 15.10.2025</h3>
                             <div class="channel">Darwinex</div>
-                            <div class="date">2 days ago</div>
+                            <div class="date">3 days ago</div>
                         </div>
                     </a>
                 </div>
@@ -5303,7 +5303,7 @@
                         <div class="video-info">
                             <h3>Darwinex TV: Performance Coaching - Session 11</h3>
                             <div class="channel">Darwinex</div>
-                            <div class="date">4 days ago</div>
+                            <div class="date">5 days ago</div>
                         </div>
                     </a>
                 </div>
@@ -5391,7 +5391,7 @@
                         <div class="video-info">
                             <h3>My New "Trading System" Kills the Market Over 17 Years</h3>
                             <div class="channel">Scott Welsh Strategies</div>
-                            <div class="date">6 days ago</div>
+                            <div class="date">1 week ago</div>
                         </div>
                     </a>
                 </div>
@@ -7238,7 +7238,7 @@
                         <div class="video-info">
                             <h3>What Makes You A Family? | Sadhguru</h3>
                             <div class="channel">Sadhguru</div>
-                            <div class="date">1 minutes ago</div>
+                            <div class="date">24 minutes ago</div>
                         </div>
                     </a>
                 </div>
@@ -9572,7 +9572,7 @@
                         <div class="video-info">
                             <h3>SIDEMEN PHOTO ROULETTE: IMPOSTOR EDITION</h3>
                             <div class="channel">MoreSidemen</div>
-                            <div class="date">8 hours ago</div>
+                            <div class="date">9 hours ago</div>
                         </div>
                     </a>
                 </div>
